# segmentation_MLOps

./: dataset.py  fit.py  get_device.py  metrics.py  pyproject.toml
code/: seg_train.py
